Improved Shipping address list UI formatting. Improved Hamburger menu spacing (and other dropdown menus) Fixed - Page footers should stay at bottom UI

--- a/src/assets/styles/flashflex/layout/_header-navbar.scss
+++ b/src/assets/styles/flashflex/layout/_header-navbar.scss
@@ -99,7 +99,8 @@
 	z-index: z('site-header-dropdown') !important; 
 	background-color: white;
 	text-align: left;
-	padding: 1rem 4.5rem 2.5rem;
+	padding: 1rem 2.5rem 2.5rem;
+	// padding: 1rem 4.5rem 2.5rem;
 
 	// Shadows
 	@include box_shadow_topless(2);
@@ -115,7 +116,7 @@
 	&.cart {
 		left: auto;
 		right: 0;
-		padding: 1rem 2.5rem 2.5rem;
+		// padding: 1rem 2.5rem 2.5rem;
 		@include for-phone-only {
 			width: 100%;
 		}
